--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'org.ec4j.editorconfig' version '0.0.3'
-    id 'com.google.cloud.tools.jib' version '2.7.0'
+    id 'com.google.cloud.tools.jib' version '3.0.0' apply false
 }
 
 allprojects {
@@ -28,9 +28,7 @@ subprojects {
 
     apply plugin: 'java'
     apply plugin: 'java-library'
-    apply plugin: 'com.google.cloud.tools.jib'
     apply plugin: 'jacoco'
-
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'application'
