chore: update Jenkinsfile to use openjdk-11

--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -2,6 +2,9 @@
 
 pipeline {
     agent any
+    tools {
+        jdk 'openjdk-11'
+    }
     stages{
         stage('Git Checkout'){
             steps{
