--- a/core/src/test/resources/application-local.yaml
+++ b/core/src/test/resources/application-local.yaml
@@ -8,5 +8,5 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-        ddl-auto: create-drop
+        ddl-auto: create
     generate-ddl: true
