chore: generate report configuration for CI/CD

--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -25,6 +25,11 @@ pipeline {
             steps{
                 script{
                     sh "./gradlew test"
+                    sh "./gradlew check"
+                    sh "echo 'generating coverage report'"
+                    sh "./gradlew codeCoverageReport"
+                    sh "echo 'send it to codecov'"
+                    sh "curl -s https://codecov.io/bash | bash"
                 }
             }
         }
