--- a/core/build.gradle
+++ b/core/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     // test
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
 }
 
 test {
