--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'java'
+    id 'maven'
+    id 'jacoco'
+
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'org.ec4j.editorconfig' version '0.0.3'
@@ -11,7 +14,11 @@ allprojects {
     version '1.0-SNAPSHOT'
 
     repositories {
+        mavenLocal()
         mavenCentral()
+        jcenter()
+
+        maven { url "http://repo1.maven.org/maven2/" }
     }
 }
 
@@ -22,10 +29,13 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'java-library'
     apply plugin: 'com.google.cloud.tools.jib'
+    apply plugin: 'jacoco'
 
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'application'
+
+    test.useTestNG()
 }
 
 project(':api') {
@@ -44,3 +54,21 @@ bootJar {
     enabled = false
 }
 
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination file("${buildDir}/reports/jacoco/report.xml")
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
+}
