--- a/codecov.yml
+++ b/codecov.yml
@@ -9,15 +9,15 @@ parsers:
       method: no
       macro: no
 
+ignore:
+  - "**/*Application.java"
+  - "**/*Config.java"
+  - "**/resources/**/*"
+
 comment:
   layout: "reach,diff,flags,files,footer"
   behavior: default
   require_changes: no
-
-comment:                  # this is a top-level key
-  layout: "reach, diff, flags, files"
-  behavior: default
-  require_changes: true  # if true: only post the comment if coverage changes
   require_base: yes        # [yes :: must have a base report to post]
   require_head: yes       # [yes :: must have a head report to post]
   branches:               # branch names that can post comment
