--- a/api/src/main/resources/application-local.yaml
+++ b/api/src/main/resources/application-local.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/gaonna
+    url: jdbc:mysql://127.0.0.1:3306/gaonna
     username: gaonna
     password: gaonna
   jpa:
@@ -8,4 +8,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-        ddl-auto: update
+        ddl-auto: create-drop
+    generate-ddl: true
+    database: mysql
+    database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
