--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,3 @@
-plugins {
-    id 'io.spring.dependency-management'
-}
-
-apply plugin: "io.spring.dependency-management"
-
 dependencies {
     // spring
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -11,7 +5,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // database
-    implementation 'mysql:mysql-connector-java'
+    runtimeOnly 'mysql:mysql-connector-java'
+    implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.4.31.Final'
 
     // lombok
     implementation 'org.projectlombok:lombok'
@@ -21,6 +16,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
