--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,10 +13,15 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     // test
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'org.junit.jupiter:junit-jupiter-api'
+    testCompile "org.junit.jupiter:junit-jupiter-params"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testCompile "org.testcontainers:testcontainers:1.15.3"
+    testCompile "org.testcontainers:junit-jupiter:1.15.3"
+    testCompile "org.testcontainers:mysql:1.15.3"
+    testCompile 'mysql:mysql-connector-java:8.0.23'
 }
 
 test {
