--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
                 script{
                     sh """
                     echo ${CHANGE_TARGET}
+                    echo ${GITHUB_PR_STATE}
                     chmod +x ./gradlew
                     ./gradlew build
                     """
