--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
             steps{
                 script{
                     sh """
-                    echo ${CHANGE_TARGET}
+                    echo ${env.CHANGE_TARGET}
                     echo ${GITHUB_PR_STATE}
                     chmod +x ./gradlew
                     ./gradlew build
