--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -8,7 +8,9 @@ pipeline {
     stages{
         stage('Git Checkout'){
             steps{
-                checkout scm
+                script{
+                    env.GIT_COMMIT = checkout scm
+                }
             }
         }
         stage('Gradlew Build'){
