--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -37,6 +37,12 @@ pipeline {
             }
         }
         stage('Push image to Harbor'){
+            when{
+                allOf {
+                    branch 'master';
+                    expression{ ${env.CHANGE_ID} == null}
+                }
+            }
             steps{
                 script {
                     sh """
