--- a/admin/build.gradle
+++ b/admin/build.gradle
@@ -1,3 +1,28 @@
+plugins {
+    id 'com.google.cloud.tools.jib'
+}
+jib {
+    allowInsecureRegistries = true
+    from {
+        image = "${DOCKER_IMG_BASE_REPOSITORY}/openjdk:11"
+        auth {
+            username = HARBOR_USERNAME
+            password = HARBOR_PASSWORD
+        }
+    }
+    to {
+        image = "${HARBOR_REPOSITORY}/${MODULE}:${IMG_TAG}"
+        auth {
+            username = HARBOR_USERNAME
+            password = HARBOR_PASSWORD
+        }
+    }
+    container {
+        mainClass = 'com.bbolab.gaonna.admin.AdminApplication'
+    }
+}
+
+
 group = 'com.bbolab.gaonna.admin'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
