--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -38,6 +38,12 @@ pipeline {
         }
         stage('Push image to Harbor'){
             steps{
+                when{
+                    allOf {
+                        branch 'master';
+                        expression{ ${env.CHANGE_ID} == null}
+                    }
+                }
                 script {
                     sh "echo 'push image to Harbor"
                     sh """
