--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
                     }
                 }
                 script {
-                    sh "echo 'push image to Harbor"
+                    sh "echo 'push image to Harbor.."
                     sh """
                     ./gradlew jib -PHARBOR_USERNAME='${HARBOR_USERNAME}' -PHARBOR_PASSWORD='${HARBOR_PASSWORD}' -PDOCKER_IMG_BASE_REPOSITORY='${DOCKER_IMG_BASE_REPOSITORY}' -PHARBOR_REPOSITORY='${HARBOR_REPOSITORY}' -PIMG_TAG='${env.GIT_COMMIT}'
                     """
