fix: Jenkinsfile syntax error

--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
         stage('Push image to Harbor'){
             steps{
                 when{
-                    allOf { branch 'master'; expression { env.CHANGE_ID == null } }
+                    expression { env.CHANGE_ID == null }
                 }
                 script {
                     sh "echo 'push image to Harbor.."
