fix: Jenkinsfile syntax error

--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -37,10 +37,13 @@ pipeline {
             }
         }
         stage('Push image to Harbor'){
-            steps{
-                when{
+            when{
+                allOf {
+                    branch 'master';
                     expression { env.CHANGE_ID == null }
                 }
+            }
+            steps{
                 script {
                     sh "echo 'push image to Harbor.."
                     sh """
