--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -44,8 +44,8 @@ pipeline {
                         ./gradlew jibDockerBuild
                         """
                     }
-                    docker.image('api:latest').push("${HARBOR_REPOSITORY}/api:${env.GIT_COMMIT}")
-                    docker.image('admin:latest').push("${HARBOR_REPOSITORY}/admin:${env.GIT_COMMIT}")
+                    Image('api:latest').push("${HARBOR_REPOSITORY}/api:${env.GIT_COMMIT}")
+                    Image('admin:latest').push("${HARBOR_REPOSITORY}/admin:${env.GIT_COMMIT}")
                 }
             }
         }
