--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -50,13 +50,9 @@ pipeline {
         stage('Push image to Harbor'){
             steps{
                 script{
-                    docker.withRegistry("${HARBOR_REPOSITORY}/gaonna_platform", HARBOR_CREDENTIAL){
-                        sh """
-                        echo push 'gaonna_platform/admin:${env.GIT_COMMIT}'
-                        echo push 'gaonna_platform/api:${env.GIT_COMMIT}'
-                        """
-                        docker.image('admin:latest').push("${env.GIT_COMMIT}")
-                        docker.image('api:latest').push("${env.GIT_COMMIT}")
+                    docker.withRegistry(HARBOR_REPOSITORY, HARBOR_CREDENTIAL){
+                        docker.image('gaonna_platform/admin:latest').push("${env.GIT_COMMIT}")
+                        docker.image('gaonna_platform/api:latest').push("${env.GIT_COMMIT}")
                     }
                 }
             }
