feat: Create Docker image via JIB and push it to Harbor deploy repository (#24)
* fix: Jenkinsfile syntax error

* fix: detach jib from pushing image

* fix: remove unnecessary dependencies

* fix: seperate JIB and Docker push

* fix: Change the local docker image

* fix: set the GIT_STATE variable as request type

* fix: Jenkinsfile syntax error

* fix: set retry option and kill gradle daemon when stage fail

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,18 +4,10 @@ plugins{
 jib {
     allowInsecureRegistries = true
     from {
-        image = "${DOCKER_IMG_BASE_REPOSITORY}/openjdk:11"
-        auth {
-            username = HARBOR_USERNAME
-            password = HARBOR_PASSWORD
-        }
+        image = "harbor.gaonna.tech/base_docker_images/openjdk:11"
     }
     to {
-        image = "${HARBOR_REPOSITORY}/${MODULE}:${IMG_TAG}"
-        auth {
-            username = HARBOR_USERNAME
-            password = HARBOR_PASSWORD
-        }
+        image = "gaonna_platform/api:latest"
     }
     container {
         mainClass = 'com.bbolab.gaonna.api.ApiApplication'
