--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -2,6 +2,9 @@
 
 pipeline {
     agent any
+    environment {
+        GIT_STATE = "${env.GIT_BRANCH == 'master' && env.CHANGE_ID == null ? 'deploy' : 'else'}"
+    }
     tools {
         jdk 'openjdk-11'
     }
@@ -10,11 +13,14 @@ pipeline {
             steps{
                 script{
                     env.GIT_COMMIT = checkout scm
-                    sh "echo ${env.GIT_COMMIT}"
+                    sh "echo ${env.GIT_STATE} GIT_COMMIT : ${env.GIT_COMMIT}"
                 }
             }
         }
         stage('Gradlew Build'){
+            options{
+                retry(1)
+            }
             steps{
                 script{
                     sh """
@@ -23,8 +29,16 @@ pipeline {
                     """
                 }
             }
+            post{
+                failure{
+                    sh "./gradle --stop"
+                }
+            }
         }
         stage('Test'){
+            options{
+                retry(1)
+            }
             steps{
                 script{
                     sh "./gradlew test"
@@ -35,19 +49,45 @@ pipeline {
                     sh "curl -s https://codecov.io/bash | bash"
                 }
             }
+            post{
+                failure{
+                    sh "./gradle --stop"
+                }
+            }
+        }
+        stage('JIB Docker images'){
+            when{
+                expression{ env.GIT_STATE == 'deploy' }
+            }
+            options{
+                retry(1)
+            }
+            steps{
+                script{
+                    docker.withRegistry(HARBOR_REPOSITORY, HARBOR_CREDENTIAL){
+                        sh """
+                        ./gradlew jibDockerBuild
+                        """
+                    }
+
+                }
+            }
+            post{
+                failure{
+                    sh "./gradle --stop"
+                }
+            }
         }
         stage('Push image to Harbor'){
             when{
-                allOf {
-                    branch 'master';
-                    expression{ ${env.CHANGE_ID} == null}
-                }
+                expression{ env.GIT_STATE == 'deploy' }
             }
             steps{
-                script {
-                    sh """
-                    ./gradlew jib -PHARBOR_USERNAME='${HARBOR_USERNAME}' -PHARBOR_PASSWORD='${HARBOR_PASSWORD}' -PDOCKER_IMG_BASE_REPOSITORY='${DOCKER_IMG_BASE_REPOSITORY}' -PHARBOR_REPOSITORY='${HARBOR_REPOSITORY}' -PIMG_TAG='${env.GIT_COMMIT}'
-                    """
+                script{
+                    docker.withRegistry(HARBOR_REPOSITORY, HARBOR_CREDENTIAL){
+                        docker.image('gaonna_platform/admin:latest').push("${env.GIT_COMMIT}")
+                        docker.image('gaonna_platform/api:latest').push("${env.GIT_COMMIT}")
+                    }
                 }
             }
         }
