--- a/api/build.gradle
+++ b/api/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.2'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.3'
 
+    // spring swagger2
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+
     // for Geometry type
     compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.15.1'
 
