--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -3,7 +3,7 @@
 pipeline {
     agent any
     environment {
-        GIT_STATE = "${env.GIT_BRANCH == 'master' && env.CHANGE_ID == null ? 'deploy' : 'else'}"
+        GIT_STATE = "${env.JOB_NAME == 'gaonna-backend-deploy' ? 'deploy' : 'else'}"
     }
     tools {
         jdk 'openjdk-11'
