--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
             steps{
                 script{
                     env.GIT_COMMIT = checkout scm
+                    env.GIT_TAG = sh(script: "git name-rev --tags --name-only ${env.GIT_COMMIT}", returnStdout: true)?.trim()
                     sh "echo ${env.GIT_STATE} GIT_COMMIT : ${env.GIT_COMMIT}"
                 }
             }
@@ -88,6 +89,37 @@ pipeline {
                         docker.image('gaonna_platform/admin:latest').push("${env.GIT_COMMIT}")
                         docker.image('gaonna_platform/api:latest').push("${env.GIT_COMMIT}")
                     }
+                }
+            }
+        }
+        stage('Update Manifest'){
+            when{
+                expression{ env.GIT_STATE == 'deploy'}
+            }
+            steps{
+                dir('gaonna-manifest'){
+                    git branch: 'main', credentialsId: 'gaonna-sa', url: 'https://github.com/bbolab/gaonna-manifest'
+                    dir('kustomize/admin/overlays/alpha'){
+                        sh "kustomize edit set image admin=harbor.gaonna.tech/gaonna_platform/admin:$GIT_COMMIT"
+                    }
+                    dir('kustomize/api/overlays/alpha'){
+                        sh "kustomize edit set image api=harbor.gaonna.tech/gaonna_platform/api:$GIT_COMMIT"
+                    }
+                    script{
+                        sh "echo $env.GIT_TAG"
+                        if(env.GIT_TAG == 'real'){
+                            dir('kustomize/admin/overlays/real'){
+                                sh "kustomize edit set image admin=harbor.gaonna.tech/gaonna_platform/admin:$GIT_COMMIT"
+                            }
+                            dir('kustomize/api/overlays/real'){
+                                sh "kustomize edit set image api=harbor.gaonna.tech/gaonna_platform/api:$GIT_COMMIT"
+                            }
+                        }
+                    }
+                    sh """
+                    git add -A
+                    git commit -m "$GIT_COMMIT" && git push -u origin main
+                    """
                 }
             }
         }
